test/integration/good/good_fundef_returntypes2.stan
functions {
  void foo() {
    if (215)
      return;
  }
}