test/integration/bad/new/fundef-bad10.stan
functions {
   void foo(corr_matrix x){
     return;
   }
}
